--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">To-Do List</string>
+    <string name="app_name">To-Do App</string>
 
     <string name="main_activity_name">All Tasks</string>
     <string name="add_task_activity_name">Add a New Task</string>
@@ -11,13 +11,16 @@
 
     <!-- Strings for AddTaskActivity -->
     <!-- This etaskEntrytask has a unicode character for "..." = "&#8230;" -->
-    <string name="edit_task_description">Describe your taskEntry&#8230;</string>
+    <string name="edit_task_description">Describe your task&#8230;</string>
+    <string name="edit_task_date">Completion date (DD/MM/YYYY)</string>
     <string name="priority_string">Priority</string>
+    <string name="task_date_string">Task Date:  </string>
+    <string name="task_update_string">Created Date:  </string>
 
     <string name="high_priority">High</string>
     <string name="med_priority">Medium</string>
     <string name="low_priority">Low</string>
 
-    <string name="add_button">Add</string>
+    <string name="add_button">Save</string>
     <string name="update_button">Update</string>
 </resources>
