--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 
     <!-- Strings for AddTaskActivity -->
     <!-- This etaskEntrytask has a unicode character for "..." = "&#8230;" -->
+    <string name="edit_task_title">Enter your task title&#8230;</string>
     <string name="edit_task_description">Describe your task&#8230;</string>
     <string name="edit_task_date">Completion date (DD/MM/YYYY)</string>
     <string name="priority_string">Priority</string>
@@ -23,4 +24,6 @@
 
     <string name="add_button">Save</string>
     <string name="update_button">Update</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
